--- a/main.css
+++ b/main.css
@@ -167,3 +167,209 @@ body{
 }
 .swiper-album-2 {
 }
+
+
+
+.meet {
+}
+
+
+.container {
+}
+
+
+.meet__wrapper {
+    display: grid;
+    grid-template-columns: 1.2fr 2fr;
+    gap: 40px;
+
+    @media (max-width: 769px) {
+        /* grid-template-columns: 1fr; */
+        display: flex;
+        flex-direction: column-reverse;
+
+    }
+
+    p{
+        font-size: 22px;
+        line-height: 1.2;
+        text-transform: uppercase;
+    }
+}
+
+
+.meet__info{
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+
+    img{
+        width: 100%;
+    }
+
+}
+
+.meet__box {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    text-align: right;
+
+    @media (max-width:768px) {
+        text-align: center;
+
+
+    }
+
+
+    img{
+        width: 100%;
+    }
+
+    p{
+        text-align: right;
+
+        @media (max-width:768px) {
+            text-align: center;
+    
+            
+        }
+    }
+
+    h2{
+        /* font-size: 200px; */
+        font-size: clamp(4.375rem, -1.944rem + 14.44vw, 12.5rem)  ;
+        line-height: 1.2;
+        text-transform: uppercase;
+    }
+
+    h3{
+        /* font-size: 90px; */
+        font-size: clamp(2.5rem, -0.257rem + 5.88vw, 5.625rem);
+
+        @media (max-width:480px) {
+            font-size: 30px;
+        }
+
+    }
+}
+
+
+.our {
+    padding: 100px 0;
+}
+
+.out__title {
+    font-size: 22px;
+    font-weight: 600;
+    text-align: center;
+    line-height: 1.2;
+    margin-bottom: 20px;
+}
+.our__wrapper {
+
+    display: grid;
+    grid-auto-columns: 1fr;
+    grid-template-columns: 1fr 1fr 1fr;
+    gap: 20px 20px;
+    grid-template-areas:
+        "card-1 card-2 card-4"
+        "card-1 card-3 card-5";
+
+
+    @media (max-width:900) {
+        grid-template-columns: 1fr 1fr ;
+
+        grid-template-areas: 
+        "card-1 card-1"
+        "card-2 card-3"
+        "card-4 card-5"; 
+        
+    }
+
+    @media (max-width:500) {
+        grid-template-columns: 1fr;
+        grid-template-areas: 
+        "card-1"
+        "card-2"
+        "card-3"
+        "card-4" 
+        "card-5";
+
+
+        
+    }
+
+.card-1 { grid-area: card-1; }
+.card-2 { grid-area: card-2; }
+.card-3 { grid-area: card-3; }
+.card-4 { grid-area: card-4; }
+.card-5 { grid-area: card-5; }
+}
+
+.our__card {
+
+    min-height: 350px;
+    border: 2px solid black;
+
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+
+
+    display: flex;
+    justify-content: flex-end;
+    padding: 25px;
+    color: white;
+    flex-direction: column;
+
+    text-transform: uppercase;
+
+    transition: 0.4s;
+
+    @media (max-width:768) {
+        min-height: 200px;
+        
+    }
+
+    h3{
+        transition: 0.4s;
+  
+    }
+
+    p{
+        transition: 0.4s;
+        height: 0px;
+        overflow: hidden;
+    }
+
+    &:hover{
+        h3{
+            font-size: 30px;
+        }
+
+        p{
+            height: 30px;
+            overflow: visible;
+        }
+    }
+}
+.card-1 {
+    background-image: url(./img/plans-1.png);
+}
+.card-2 {
+    background-image: url(./img/plans-2.png);
+
+}
+.card-3 {
+    background-image: url(./img/plans-3.png);
+
+}
+.card-4 {
+    background-image: url(./img/plans-4.png);
+
+}
+.card-5 {
+    background-image: url(./img/plans-5.png);
+
+}
